--- a/css/custom.css
+++ b/css/custom.css
@@ -19,7 +19,7 @@ i {
 
 .reveal .imgcite cite{
   display: block;
-  font-size: 0.4em;
+  font-size: 0.5em;
   text-align: center;
   line-height: 1.25em;
 }
@@ -97,4 +97,19 @@ i {
 
 .reveal .smaller{
   font-size: 0.5em !important;
+}
+
+.reveal p {
+  font-size: 1.25em !important;
+}
+
+.reveal pre code {
+  font-size: 1.25em !important;
+}
+
+.reveal .eqcite cite{
+  display: block;
+  font-size: 0.5em;
+  text-align: right;
+  line-height: 1.25em;
 }
